--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capybara</title>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="src/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Ingrid+Darling&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="../img/logo.svg" alt="capybara">
+        <img src="src/img/logo.svg" alt="capybara">
         <h1 class="header_h">Capybara</h1>
         <div class="tabs__nav">
             <button class="btn" type="button" data-tab="#tab_1">memes</button>
@@ -156,7 +156,7 @@
     </main>
 
     <footer>
-        <img src="../img/capybara_footer.svg" alt="capybara">
+        <img src="src/img/capybara_footer.svg" alt="capybara">
         <div class="contacts names">
             <h1>ПСО "Скпипт"</h1>
             <p>Капибара Лиза
@@ -173,16 +173,16 @@
                 любителей капибар
             </p>
             <div class="footer_icons">
-                <img src="../img/inst.svg" alt="inst">
-                <img src="../img/vk.svg" alt="vk">
-                <img src="../img/face.svg" alt="facebook">
-                <img src="../img/twiter.svg" alt="twiter">
+                <img src="src/img/inst.svg" alt="inst">
+                <img src="src/img/vk.svg" alt="vk">
+                <img src="src/img/face.svg" alt="facebook">
+                <img src="src/img/twiter.svg" alt="twiter">
             </div>
         </div>
     </footer>
 
-    <script src="../js/app.js"></script>
-    <script src="../js/culc.js"></script>
+    <script src="src/js/app.js"></script>
+    <script src="src/js/culc.js"></script>
 
 </body>
 
