--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     </div>
                 </div>
                 <div class="culc_img">
-                    <img class="img1" src="../img/schedule.png" alt="schedule">
-                    <img class="img2" src="../img/capybaras.svg" alt="capybaras">
+                    <img class="img1" src="src/img/schedule.png" alt="schedule">
+                    <img class="img2" src="src/img/capybaras.svg" alt="capybaras">
                 </div>
             </div>
         </div>
