--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capybara</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="C:\Users\сметана\Desktop\тз\src\slider.css">
+    <link rel="stylesheet" href="../styles/modules/slider.css">
     <link href="https://fonts.googleapis.com/css2?family=Ingrid+Darling&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -30,10 +30,10 @@
                 <div class="swiper_container">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="../img/cap_meme1.jpg"></div>
-                        <div class="swiper-slide"><img src="../img/cap_meme2.jpg">
+                        <div class="swiper-slide"><img src="../img/cap_meme1.jpg" alt="meme"></div>
+                        <div class="swiper-slide"><img src="../img/cap_meme2.jpg" alt="meme">
                         </div>
-                        <div class="swiper-slide"><img src="../img/cap_meme3.jpg"></div>
+                        <div class="swiper-slide"><img src="../img/cap_meme3.jpg" alt="meme"></div>
                         
                     </div>
                     <div class="swiper-pagination"></div>
