--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capybara</title>
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/modules/slider.css">
+    <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="stylesheet" href="src/styles/modules/slider.css">
     <link href="https://fonts.googleapis.com/css2?family=Ingrid+Darling&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="../img/logo.svg" alt="capybara">
+        <img src="src/img/logo.svg" alt="capybara">
         <h1 class="header_h">Capybara</h1>
         <div class="tabs__nav">
             <button class="btn" type="button" data-tab="#tab_1">memes</button>
@@ -30,10 +30,10 @@
                 <div class="swiper_container">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="../img/cap_meme1.jpg" alt="meme"></div>
-                        <div class="swiper-slide"><img src="../img/cap_meme2.jpg" alt="meme">
+                        <div class="swiper-slide"><img src="src/img/cap_meme1.jpg" alt="meme"></div>
+                        <div class="swiper-slide"><img src="src/img/cap_meme2.jpg" alt="meme">
                         </div>
-                        <div class="swiper-slide"><img src="../img/cap_meme3.jpg" alt="meme"></div>
+                        <div class="swiper-slide"><img src="src/img/cap_meme3.jpg" alt="meme"></div>
                         
                     </div>
                     <div class="swiper-pagination"></div>
@@ -111,15 +111,15 @@
                     </div>
                 </div>
                 <div class="culc_img">
-                    <img class="img1" src="../img/schedule.png" alt="schedule">
-                    <img class="img2" src="../img/capybaras.svg" alt="capybaras">
+                    <img class="img1" src="src/img/schedule.png" alt="schedule">
+                    <img class="img2" src="src/img/capybaras.svg" alt="capybaras">
                 </div>
             </div>
         </div>
     </main>
 
     <footer>
-        <img src="../img/capybara_footer.svg" alt="capybara">
+        <img src="src/img/capybara_footer.svg" alt="capybara">
         <div class="contacts names">
             <h1>ПСО "Скпипт"</h1>
             <p>Капибара Лиза
@@ -136,16 +136,16 @@
                 любителей капибар
             </p>
             <div class="footer_icons">
-                <img src="../img/inst.svg" alt="inst">
-                <img src="../img/vk.svg" alt="vk">
-                <img src="../img/face.svg" alt="facebook">
-                <img src="../img/twiter.svg" alt="twiter">
+                <img src="src/img/inst.svg" alt="inst">
+                <img src="src/img/vk.svg" alt="vk">
+                <img src="src/img/face.svg" alt="facebook">
+                <img src="src/img/twiter.svg" alt="twiter">
             </div>
         </div>
     </footer>
 
-    <script src="../js/app.js"></script>
-    <script src="../js/culc.js"></script>
+    <script src="src/js/app.js"></script>
+    <script src="src/js/culc.js"></script>
 
 </body>
 
