--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </script>
 
                 <div>
-                    <img class = "two_cap" src="../img/capybaras.svg">
+                    <img class = "two_cap" src="src/img/capybaras.svg">
                 </div>
 
             </div>
